force-app/main/default/objects/OpportunityContactRole/fields/Decision_Power_Level__c.field-meta.xml
<CustomField>
    <fullName>Decision_Power_Level__c</fullName>
    <description>Field used for VVS</description>
    <label>Decision Power Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Outsider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>