force-app/main/default/objects/OpportunityContactRole/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Field used for VVS</description>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Champion</fullName>
            </value>
            <value>
                <fullName>Supporter</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Opponent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>