force-app/main/default/objects/OpportunityContactRole/fields/newValueMap__c.field-meta.xml
<CustomField>
    <fullName>newValueMap__c</fullName>
    <label>newValueMap</label>
    <type>DateTime</type>
</CustomField>