force-app/main/default/objects/OpportunityContactRole/fields/Opponent_Reason__c.field-meta.xml
<CustomField>
    <fullName>Opponent_Reason__c</fullName>
    <description>Field used for VVS</description>
    <label>Opponent Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>