force-app/main/default/objects/OpportunityContactRole/fields/peopleai__Created_by_PeopleAI__c.field-meta.xml
<CustomField>
    <fullName>peopleai__Created_by_PeopleAI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean marker that tells that record was created by People.ai</description>
    <label>Created By People.ai</label>
    <type>Checkbox</type>
</CustomField>