force-app/main/default/objects/OpportunityContactRole/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <description>For VVS</description>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Persona</valueSetName>
    </valueSet>
</CustomField>