force-app/main/default/objects/OpportunityContactRole/fields/TSPC__CPDealId__c.field-meta.xml
<CustomField>
    <fullName>TSPC__CPDealId__c</fullName>
    <formula>CASESAFEID(Opportunity.TSPC__CPDeal__c)</formula>
    <label>CP: Deal ID</label>
    <type>Text</type>
</CustomField>