force-app/main/default/objects/OpportunityContactRole/fields/Value_Map__c.field-meta.xml
<CustomField>
    <fullName>Value_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field used for VVS</description>
    <label>Value Map</label>
    <referenceTo>VVS_Value_Map__c</referenceTo>
    <relationshipLabel>Opportunity Contact Role</relationshipLabel>
    <relationshipName>Opportunity_Contact_Role</relationshipName>
    <type>Lookup</type>
</CustomField>